@@ -341,11 +341,15 @@ class TestChameleonRendererLookup(unittest.TestCase):
 
 class TestRendererFromName(unittest.TestCase):
     def setUp(self):
+        from zope.deprecation import __show__
+        __show__.off()
         self.config = cleanUp()
 
     def tearDown(self):
         cleanUp()
-        
+        from zope.deprecation import __show__
+        __show__.on()
+
     def _callFUT(self, path, package=None):
         from pyramid.renderers import renderer_from_name
         return renderer_from_name(path, package)
@@ -686,6 +690,23 @@ class TestRendererHelper(unittest.TestCase):
         response = helper._make_response('abc', request)
         self.assertEqual(response.status, '406 You Lose')
         self.assertEqual(response.body, 'abc')
+
+    def test_clone_noargs(self):
+        helper = self._makeOne('name', 'package', 'registry')
+        cloned_helper = helper.clone()
+        self.assertEqual(cloned_helper.name, 'name')
+        self.assertEqual(cloned_helper.package, 'package')
+        self.assertEqual(cloned_helper.registry, 'registry')
+        self.assertFalse(helper is cloned_helper)
+
+    def test_clone_allargs(self):
+        helper = self._makeOne('name', 'package', 'registry')
+        cloned_helper = helper.clone(name='name2', package='package2',
+                                     registry='registry2')
+        self.assertEqual(cloned_helper.name, 'name2')
+        self.assertEqual(cloned_helper.package, 'package2')
+        self.assertEqual(cloned_helper.registry, 'registry2')
+        self.assertFalse(helper is cloned_helper)
 
 class Test_render(unittest.TestCase):
     def setUp(self):
